--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #f5f5f5;
-    font-family: 'Poppins', 'sans-serif';
+    font-family: 'Poppins', sans-serif;
 }
 
 header, footer{
@@ -13,9 +17,55 @@ main{
 }
 main > form{
     margin: 3% 0;
+    display: flex;
+    row-gap: 20px;
     align-self: center;
+    flex-direction: column;
+}
+
+label{
+    display: block;
+    margin-bottom: 10px;
+}
+input{
+    display: inline;
+    font-family: 'Poppins',sans-serif;
+    width: 236px;
+    border: 1px solid #ced4da;
+    padding: 10px;
+    border-radius: 0px 5px 5px 0px;
+
+}
+input[type="submit"]{
+    background-color: #fd0c49;
+    color: #fff;
+    font-weight: 400;
+    border-radius: 5px;
+    width: 100%;
+}
+select{
+    font-family: 'Poppins',sans-serif;
+    width: 100%;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
 }
 
 input, select{
+    font-size:18px;
+    font-weight: 200;
     font-family: 'Poppins', 'sans-serif';
+}
+
+/* ID's */
+#nicka{
+    float: left;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    width: 20px;
+    background-color: #ced4da;
+    border: 1px solid #ced4da;
+    padding: 10px;
+    border-radius: 5px 0px 0px 5px;
+    font-weight: 400;
+    font-size: 18px;
 }
