--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,5 @@
 body{
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     background-color: #f5f5f5;
     font-family: 'Poppins', sans-serif;
 }
@@ -56,7 +53,29 @@ input, select{
     font-family: 'Poppins', 'sans-serif';
 }
 
+/* CLASSES */
+.container{
+    height: 100%;
+    display: flex;
+    max-width: 1280px;
+    align-items: center;    
+    flex-direction: column;
+    justify-content: center;
+}
+
 /* ID's */
+#errorPanel{
+    height: 75px;
+    display: flex;
+    margin: 25px 0;
+    font-weight: 300;
+    color: #fd0c49;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #fd0c49;
+}
+
 #nicka{
     float: left;
     font-family: 'Poppins', sans-serif;
