Mostrar mensaje de error personalizado, en HTML, en caso de que la validación falle.

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ input, select{
 /* ID's */
 #errorPanel{
     height: 75px;
-    display: flex;
+    display: none;
     margin: 25px 0;
     font-weight: 300;
     color: #fd0c49;
