--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,22 @@
 body{
-    height: 100vh;
     background-color: #f5f5f5;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins',sans-serif;
 }
-
-header, footer{
+header,footer{
     text-align: center;
+    margin: 30px auto 0px auto;
+    width: 300px;
 }
-
 main{
+    margin: 30px auto 0px auto;
+    width: 300px;
+}
+form{
     display: flex;
     flex-direction: column;
-}
-main > form{
-    margin: 3% 0;
-    display: flex;
     row-gap: 20px;
-    align-self: center;
-    flex-direction: column;
+    font-size: 18px;
 }
-
 label{
     display: block;
     margin-bottom: 10px;
@@ -31,7 +28,16 @@ input{
     border: 1px solid #ced4da;
     padding: 10px;
     border-radius: 0px 5px 5px 0px;
+    font-weight: 200;
+    font-size:18px;
 
+}
+input[type="email"]{
+    border: 1px solid #ced4da;
+    font-weight: 200;
+    font-size:18px;
+    border-radius: 5px;
+    width: 278px;
 }
 input[type="submit"]{
     background-color: #fd0c49;
@@ -45,37 +51,17 @@ select{
     width: 100%;
     border: 1px solid #ced4da;
     border-radius: 5px;
-}
-
-input, select{
-    font-size:18px;
     font-weight: 200;
-    font-family: 'Poppins', 'sans-serif';
+    font-size:18px;
 }
-
-/* CLASSES */
-.container{
-    height: 100%;
-    display: flex;
-    max-width: 1280px;
-    align-items: center;    
-    flex-direction: column;
-    justify-content: center;
+p{
+    font-weight: 100;
+    font-size: 14px;
 }
-
-/* ID's */
-#errorPanel{
-    height: 75px;
-    display: none;
-    margin: 25px 0;
-    font-weight: 300;
-    color: #fd0c49;
-    border-radius: 5px;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #fd0c49;
+footer{
+    font-weight: 100;
 }
-
+/*IDs*/
 #nicka{
     float: left;
     font-family: 'Poppins', sans-serif;
@@ -87,4 +73,17 @@ input, select{
     border-radius: 5px 0px 0px 5px;
     font-weight: 400;
     font-size: 18px;
+}
+
+#errorPanel{
+    height: 75px;
+    display: none;
+    margin: 25px 0;
+    font-size: 14px;
+    font-weight: 300;
+    color: #fd0c49;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #fd0c49;
 }
