--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    height: 100vh;
     background-color: #f5f5f5;
     font-family: 'Poppins',sans-serif;
 }
@@ -61,6 +62,18 @@ p{
 footer{
     font-weight: 100;
 }
+
+/* CLASSES */
+.container{
+    height: 100%;
+    display: flex;
+    max-width: 1280px;
+    align-items: center;    
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 /*IDs*/
 #nicka{
     float: left;
