--- a/css/styles.css
+++ b/css/styles.css
@@ -3,91 +3,52 @@ body{
     background-color: #f5f5f5;
     font-family: 'Poppins',sans-serif;
 }
-header,footer{
-    text-align: center;
-    margin: 30px auto 0px auto;
-    width: 300px;
+header{
+    margin: 40px;
 }
-main{
-    margin: 30px auto 0px auto;
-    width: 300px;
-}
-form{
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    font-size: 18px;
-}
-label{
-    display: block;
-    margin-bottom: 10px;
-}
-input{
-    display: inline;
-    font-family: 'Poppins',sans-serif;
-    width: 236px;
-    border: 1px solid #ced4da;
+label, input, select{
     padding: 10px;
-    border-radius: 0px 5px 5px 0px;
-    font-weight: 200;
-    font-size:18px;
-
+    font-size: 18px;
+    font-family: 'Poppins',sans-serif;
 }
-input[type="email"]{
+input, select{
     border: 1px solid #ced4da;
-    font-weight: 200;
-    font-size:18px;
     border-radius: 5px;
-    width: 278px;
 }
 input[type="submit"]{
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 1px solid #fd0c49;
     background-color: #fd0c49;
-    color: #fff;
-    font-weight: 400;
-    border-radius: 5px;
-    width: 100%;
-}
-select{
-    font-family: 'Poppins',sans-serif;
-    width: 100%;
-    border: 1px solid #ced4da;
-    border-radius: 5px;
-    font-weight: 200;
-    font-size:18px;
-}
-p{
-    font-weight: 100;
-    font-size: 14px;
 }
 footer{
-    font-weight: 100;
+    margin-top: 40px;
 }
 
-/* CLASSES */
-.container{
-    height: 100%;
+
+
+/* CLASSes */
+.flexCenter{
     display: flex;
-    max-width: 1280px;
-    align-items: center;    
+    align-items: center;
     flex-direction: column;
     justify-content: center;
 }
-
-
-/*IDs*/
-#nicka{
-    float: left;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    width: 20px;
-    background-color: #ced4da;
-    border: 1px solid #ced4da;
-    padding: 10px;
-    border-radius: 5px 0px 0px 5px;
-    font-weight: 400;
-    font-size: 18px;
+.flexColumn{
+    display: flex;
+    flex-direction: column;
+}
+.container{
+    max-width: 1280px;
 }
 
+
+
+/* ID's */
+#form{
+    row-gap: 20px;
+}
 #errorPanel{
     height: 75px;
     display: none;
@@ -99,4 +60,16 @@ footer{
     align-items: center;
     justify-content: center;
     border: 1px solid #fd0c49;
+}
+
+#nickAt{
+    float: left;
+    width: 20px;
+    text-align: center;
+    background-color: #ced4da;
+    border: 1px solid #ced4da;
+    border-radius: 5px 0px 0px 5px;
+}
+#nick{
+    border-radius: 0px 5px 5px 0px;
 }
