--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,10 @@ body{
 header{
     margin: 40px;
 }
+
 label, input, select{
     padding: 10px;
+    margin: 5px 0;
     font-size: 18px;
     font-family: 'Poppins',sans-serif;
 }
@@ -35,6 +37,11 @@ footer{
     flex-direction: column;
     justify-content: center;
 }
+.flexRowCenter{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
 .flexColumn{
     display: flex;
     flex-direction: column;
@@ -42,7 +49,20 @@ footer{
 .container{
     max-width: 1280px;
 }
+.avatarIcon{
+    padding: 5px;
+    max-width: 3em;
+    border-radius: 5px;
+    border: 1px solid #fd0c49;
+}
 
+.width350px{
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    margin: auto 0;
+}
 
 
 /* ID's */
@@ -61,9 +81,11 @@ footer{
     justify-content: center;
     border: 1px solid #fd0c49;
 }
-
+#nickUser{
+    width: 100%;
+    display: flex;
+}
 #nickAt{
-    float: left;
     width: 20px;
     text-align: center;
     background-color: #ced4da;
@@ -72,4 +94,13 @@ footer{
 }
 #nick{
     border-radius: 0px 5px 5px 0px;
+}
+#avatarsLayout{
+    flex-wrap: wrap;
+    gap: 7.5px;
+}
+#choosenAvatar{
+    padding: 10px;
+    border: 1px solid #fd0c49;
+    border-radius: 5px;
 }
